--- a/xxl-job-admin/src/main/resources/i18n/message_en.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_en.properties
@@ -120,6 +120,7 @@ jobinfo_field_executorparam=Param
 jobinfo_field_cron_unvalid=The Cron is illegal
 jobinfo_field_cron_never_fire=The Cron will never fire
 jobinfo_field_author=Author
+jobinfo_field_businessCode=Business Code
 jobinfo_field_alarmemail=Alarm email
 jobinfo_field_alarmemail_placeholder=Please enter alarm mail, if there are more than one comma separated
 jobinfo_field_executorRouteStrategy=Route Strategy
